1998-11-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* texi/Makefile.in (.texi:): Don't escape double quote.
	(texi2latex.elc:): Ditto.

1998-11-12  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* texi/gnus-ja.texi: Add infos about `pop3-fma' and `gnus-offline'.

1998-11-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/message.el (message-maybe-split-and-send-mail): Use
	`defsubst' instead of `defun'.
	(message-maybe-split-and-send-news): Ditto.

1998-11-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-summary-resend-bounced-mail): Bind
	`gnus-message-setup-hook' to minimum setting.

	* lisp/message.el (message-bounce-setup-for-mime-edit): New
	function.
	(message-bounce-setup-function): New user option. Use
	`message-bounce-setup-for-mime-edit' in default.
	(message-bounce): Call `message-bounce-setup-function' if it is
	non-nil.
	(message-bounce-setup-hook): New user option.
	(message-send-mail): Delete useless things.

1998-11-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/message.el (message-maybe-split-and-send-mail): New function.
	(message-send-mail): Use it.
	(message-maybe-split-and-send-news): New function.
	(message-send-news): Use it.

1998-11-11  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus-offline.el: bug fix.

	* lisp/gnus-ofsetup.el: Bug fix.

1998-11-11  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/message.el (message-send-mail): Protect against errors.
	(message-send-news): Ditto.

1998-11-11  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* lisp/message.el (message-do-fcc): Sync up with Semi-gnus 6.8.
	(message-8bit-encoding-list): New variable.
	(message-check-encoding): Use `message-8bit-encoding-list'. Change
	search pattern.

1998-11-11  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* lisp/gnus-bbdb.el (gnus-bbdb/extract-address-components): Normalize
	return value.
	(gnus-bbdb/update-record): Change condition for checking own message.

1998-11-11  Yoshiki Hayashi  <g740685@komaba.ecc.u-tokyo.ac.jp>
