@@ -1,3 +1,9 @@
+1998-11-12  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/gnus-offline.el: bug fix.
+
+	* lisp/gnus-ofsetup.el: Bug fix.
+
 1998-11-12  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* texi/Makefile.in (.texi:): Don't escape double quote.
